fix links in mob menu, now fetch comes from HeaderWrap

--- a/src/components/UI/ModalHeaders/Modal/style.module.css
+++ b/src/components/UI/ModalHeaders/Modal/style.module.css
@@ -23,7 +23,7 @@
 }
 
 @media screen and (max-width: 640px) {
-  .modal {
-    top: 50px;
+  .wrap {
+    display: none;
   }
 }
